--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ workflows:
     jobs:
       - build-and-test
 jobs:
-  example-job:
+  build-and-test:
     docker:
       # replace with your preferred image
       - image: cimg/base:stable
@@ -23,26 +23,21 @@ jobs:
           app-dir: /app 
           pkg-manager: pip 
 
-workflows:
-  example-workflow:
-    jobs:
-      - example-job
-
-jobs:
-  build-and-test:  # This is the name of the job, feel free to change it to better match what you're trying to do!
+#jobs:
+  #build-and-test:  # This is the name of the job, feel free to change it to better match what you're trying to do!
     # These next lines defines a Docker executors: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of the convenience images from CircleCI's Developer Hub
     # A list of available CircleCI Docker convenience images are available here: https://circleci.com/developer/images/image/cimg/python
     # The executor is the environment in which the steps below will be executed - below will use a python 3.9 container
     # Change the version below to your required version of python
-    docker:
-      - image: cimg/python:3.8
+    #docker:
+    #  - image: cimg/python:3.8
     # Checkout the code as the first step. This is a dedicated CircleCI step.
     # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
     # Here we're making sure we use just use the system-wide pip. By default it uses the project root's requirements.txt.
     # Then run your tests!
     # CircleCI will report the results back to your VCS provider.
-    steps:
+    
       - checkout
       - python/install-packages:
           pkg-manager: pip
