--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ aiohttp==3.7.4.post0
     # via -r ./requirements.in
 appdirs==1.4.4
     # via black
+asgiref==3.4.1
+    # via uvicorn
 astroid==2.6.6
     # via pylint
 async-timeout==3.0.1
@@ -28,6 +30,7 @@ click==8.0.1
     # via
     #   black
     #   flask
+    #   uvicorn
 coverage==5.5
     # via pytest-cov
 fastapi==0.68.0
@@ -40,6 +43,10 @@ flask-swagger==0.2.14
     # via -r ./requirements.in
 flask-swagger-ui==3.36.0
     # via -r ./requirements.in
+h11==0.12.0
+    # via uvicorn
+httptools==0.2.0
+    # via uvicorn
 idna==3.2
     # via
     #   requests
@@ -93,8 +100,12 @@ pytest-cov==2.12.1
     # via -r ./requirements.in
 pytest-mock==3.6.1
     # via -r ./requirements.in
+python-dotenv==0.19.0
+    # via uvicorn
 pyyaml==5.4.1
-    # via flask-swagger
+    # via
+    #   flask-swagger
+    #   uvicorn
 regex==2021.8.3
     # via black
 requests==2.26.0
@@ -114,6 +125,14 @@ typing-extensions==3.10.0.0
     #   pydantic
 urllib3==1.26.6
     # via requests
+uvicorn[standard]==0.15.0
+    # via -r ./requirements.in
+uvloop==0.16.0
+    # via uvicorn
+watchgod==0.7
+    # via uvicorn
+websockets==9.1
+    # via uvicorn
 werkzeug==2.0.1
     # via flask
 wrapt==1.12.1
