--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ workflows:
     # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows 
     jobs:
       - build-and-test
-      - upload-coverage
+     # - upload-coverage
 
 
 jobs:
@@ -40,12 +40,12 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-
           command: coverage run -m pytest --ignore=src/api/responder.py
-  upload-coverage: 
-    docker:
-      # replace with your preferred image
-      - image: cimg/python:3.9
-    steps:
-      - codecov/upload 
+      - codecov/upload
 
+#upload-coverage:
+  # docker:
+      # replace with your preferred image
+  #    - image: cimg/python:3.9
+  #  steps:
+  #    - codecov/upload 
