--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,11 @@ jobs:
           # This assumes pytest is installed via the install-package step above
           command: coverage run -m pytest --ignore=src/api/responder.py
       - codecov/upload
+          file: .coverage
 
 #upload-coverage:
   # docker:
       # replace with your preferred image
   #    - image: cimg/python:3.9
   #  steps:
-  #    - codecov/upload 
+  #    - codecov/upload
