--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,8 @@ jobs:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: coverage run -m pytest --ignore=src/api/responder.py
-      - codecov/upload:
-          file: .coverage
+      - run:
+          name: Combine coverage
+          command: coverage combine
+      - codecov/upload
+
