--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: coverage run -m pytest --ignore=src/api/responder.py -o coverage.xml
+          command: coverage run -m pytest -o coverage.xml
       - codecov/upload:
           file: coverage.xml
 
