--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,6 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: coverage run -m pytest --output-xml coverage.xml
+          command: coverage run -m pytest
       - codecov/upload:
-          file: coverage.xml
 
