--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,5 @@ jobs:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: coverage run -m pytest
-      - codecov/upload:
+      - codecov/upload
 
