--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,11 @@ jobs:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: coverage run -m pytest
+      - run:
+          name: Coverage Report plain
+          command: coverage report
+      - run:
+          name: Coverage Report HTML
+          command: coverage html
       - codecov/upload
 
