--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,8 @@ jobs:
           command: coverage run -m pytest --ignore=src/api/responder.py
       - codecov/upload
           file: .coverage
+      - run:
+          name: Update version
+          when: on_success
+          command: semantic-release publish
 
-#upload-coverage:
-  # docker:
-      # replace with your preferred image
-  #    - image: cimg/python:3.9
-  #  steps:
-  #    - codecov/upload
