--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,5 +45,10 @@ jobs:
           name: Coverage Report plain
           command: coverage xml
       - codecov/upload
+          file: .coverage
+      - run:
+          name: Update version
+          when: on_success
+          command: semantic-release publish
 
 
