--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ attrs==21.2.0
     #   pytest
 black==21.7b0
     # via -r .\requirements.in
+bleach==4.1.0
+    # via readme-renderer
 certifi==2021.5.30
     # via requests
 chardet==4.0.0
@@ -31,18 +33,28 @@ charset-normalizer==2.0.4
 click==8.0.1
     # via
     #   black
+    #   click-log
     #   flask
+    #   python-semantic-release
     #   uvicorn
+click-log==0.3.2
+    # via python-semantic-release
 colorama==0.4.4
     # via
     #   click
     #   pylint
     #   pytest
+    #   tqdm
+    #   twine
     #   uvicorn
 coverage==5.5
     # via
     #   -r .\requirements.in
     #   pytest-cov
+docutils==0.17.1
+    # via readme-renderer
+dotty-dict==1.3.0
+    # via python-semantic-release
 fastapi==0.68.0
     # via -r .\requirements.in
 flask==2.0.1
@@ -53,6 +65,10 @@ flask-swagger==0.2.14
     # via -r .\requirements.in
 flask-swagger-ui==3.36.0
     # via -r .\requirements.in
+gitdb==4.0.7
+    # via gitpython
+gitpython==3.1.18
+    # via python-semantic-release
 h11==0.12.0
     # via uvicorn
 httptools==0.2.0
@@ -61,14 +77,22 @@ idna==3.2
     # via
     #   requests
     #   yarl
+importlib-metadata==4.7.1
+    # via
+    #   keyring
+    #   twine
 iniconfig==1.1.1
     # via pytest
+invoke==1.6.0
+    # via python-semantic-release
 isort==5.9.3
     # via pylint
 itsdangerous==2.0.1
     # via flask
 jinja2==3.0.1
     # via flask
+keyring==23.1.0
+    # via twine
 lazy-object-proxy==1.6.0
     # via astroid
 logstash==0.1.dev0
@@ -84,9 +108,13 @@ multidict==5.1.0
 mypy-extensions==0.4.3
     # via black
 packaging==21.0
-    # via pytest
+    # via
+    #   bleach
+    #   pytest
 pathspec==0.9.0
     # via black
+pkginfo==1.7.1
+    # via twine
 pluggy==0.13.1
     # via pytest
 py==1.10.0
@@ -95,6 +123,8 @@ py4j==0.10.9
     # via pyspark
 pydantic==1.8.2
     # via fastapi
+pygments==2.10.0
+    # via readme-renderer
 pylint==2.9.6
     # via -r .\requirements.in
 pyparsing==2.4.7
@@ -112,16 +142,43 @@ pytest-mock==3.6.1
     # via -r .\requirements.in
 python-dotenv==0.19.0
     # via uvicorn
+python-gitlab==2.10.0
+    # via python-semantic-release
+python-semantic-release==7.19.1
+    # via -r .\requirements.in
+pywin32-ctypes==0.2.0
+    # via keyring
 pyyaml==5.4.1
     # via
     #   flask-swagger
     #   uvicorn
+readme-renderer==29.0
+    # via twine
 regex==2021.8.3
     # via black
 requests==2.26.0
-    # via -r .\requirements.in
-semantic-release==0.1.0
-    # via -r .\requirements.in
+    # via
+    #   -r .\requirements.in
+    #   python-gitlab
+    #   python-semantic-release
+    #   requests-toolbelt
+    #   twine
+requests-toolbelt==0.9.1
+    # via
+    #   python-gitlab
+    #   twine
+rfc3986==1.5.0
+    # via twine
+semver==2.13.0
+    # via python-semantic-release
+setuptools-scm==6.0.1
+    # via dotty-dict
+six==1.16.0
+    # via
+    #   bleach
+    #   readme-renderer
+smmap==4.0.0
+    # via gitdb
 starlette==0.14.2
     # via fastapi
 toml==0.10.2
@@ -131,6 +188,12 @@ toml==0.10.2
     #   pytest-cov
 tomli==1.2.1
     # via black
+tomlkit==0.7.0
+    # via python-semantic-release
+tqdm==4.62.2
+    # via twine
+twine==3.4.2
+    # via python-semantic-release
 typing-extensions==3.10.0.0
     # via
     #   aiohttp
@@ -141,14 +204,20 @@ uvicorn[standard]==0.15.0
     # via -r .\requirements.in
 watchgod==0.7
     # via uvicorn
+webencodings==0.5.1
+    # via bleach
 websockets==9.1
     # via uvicorn
 werkzeug==2.0.1
     # via flask
+wheel==0.37.0
+    # via python-semantic-release
 wrapt==1.12.1
     # via astroid
 yarl==1.6.3
     # via aiohttp
+zipp==3.5.0
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
