--- a/requirements.txt
+++ b/requirements.txt
@@ -107,10 +107,14 @@ multidict==5.1.0
     #   yarl
 mypy-extensions==0.4.3
     # via black
+numpy==1.21.2
+    # via pandas
 packaging==21.0
     # via
     #   bleach
     #   pytest
+pandas==1.3.2
+    # via -r .\requirements.in
 pathspec==0.9.0
     # via black
 pkginfo==1.7.1
@@ -140,12 +144,16 @@ pytest-cov==2.12.1
     # via -r .\requirements.in
 pytest-mock==3.6.1
     # via -r .\requirements.in
+python-dateutil==2.8.2
+    # via pandas
 python-dotenv==0.19.0
     # via uvicorn
 python-gitlab==2.10.0
     # via python-semantic-release
 python-semantic-release==7.19.1
     # via -r .\requirements.in
+pytz==2021.1
+    # via pandas
 pywin32-ctypes==0.2.0
     # via keyring
 pyyaml==5.4.1
@@ -176,6 +184,7 @@ setuptools-scm==6.0.1
 six==1.16.0
     # via
     #   bleach
+    #   python-dateutil
     #   readme-renderer
 smmap==4.0.0
     # via gitdb
