Nic saves the day

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,10 @@ jobs:
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
+          name: Install Local Dependencies
+          # Install the local air quality package to allow tests to run
+          command: pip install .
+      - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: coverage run -m pytest
