--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /htmlcov/
+/.idea/.gitignore
+/.idea/air-quality-poc.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
