--- a/requirements.txt
+++ b/requirements.txt
@@ -4,200 +4,200 @@
 #
 #    pip-compile ./requirements.in
 #
-appdirs==1.4.4
+appdirs
     # via black
-asgiref==3.4.1
+asgiref
     # via uvicorn
-astroid==2.7.2
+astroid
     # via pylint
-attrs==21.2.0
+attrs
     # via pytest
-black==21.7b0
+black
     # via -r ./requirements.in
-bleach==4.1.0
+bleach
     # via readme-renderer
-certifi==2021.5.30
+certifi
     # via requests
-charset-normalizer==2.0.4
+charset-normalizer
     # via requests
-click==8.0.1
+click
     # via
     #   black
     #   click-log
     #   flask
     #   python-semantic-release
     #   uvicorn
-click-log==0.3.2
+click-log
     # via python-semantic-release
-colorama==0.4.4
+colorama
     # via twine
-coverage==5.5
+coverage
     # via
     #   -r ./requirements.in
     #   pytest-cov
-docutils==0.17.1
+docutils
     # via readme-renderer
-dotty-dict==1.3.0
+dotty-dict
     # via python-semantic-release
-fastapi==0.68.1
+fastapi
     # via -r ./requirements.in
-flask==2.0.1
+flask
     # via
     #   flask-swagger
     #   flask-swagger-ui
-flask-swagger==0.2.14
+flask-swagger
     # via -r ./requirements.in
-flask-swagger-ui==3.36.0
+flask-swagger-ui
     # via -r ./requirements.in
-gitdb==4.0.7
+gitdb
     # via gitpython
-gitpython==3.1.18
+gitpython
     # via python-semantic-release
-h11==0.12.0
+h11
     # via uvicorn
-httptools==0.2.0
+httptools
     # via uvicorn
-idna==3.2
+idna
     # via requests
-importlib-metadata==4.7.1
+importlib-metadata
     # via
     #   keyring
     #   twine
-iniconfig==1.1.1
+iniconfig
     # via pytest
-invoke==1.6.0
+invoke
     # via python-semantic-release
-isort==5.9.3
+isort
     # via pylint
-itsdangerous==2.0.1
+itsdangerous
     # via flask
-jinja2==3.0.1
+jinja2
     # via flask
-keyring==23.1.0
+keyring
     # via twine
-lazy-object-proxy==1.6.0
+lazy-object-proxy
     # via astroid
-logstash==0.1.dev0
+logstash
     # via -r ./requirements.in
-markupsafe==2.0.1
+markupsafe
     # via jinja2
-mccabe==0.6.1
+mccabe
     # via pylint
-mypy-extensions==0.4.3
+mypy-extensions
     # via black
-numpy==1.21.2
+numpy
     # via pandas
-packaging==21.0
+packaging
     # via
     #   bleach
     #   pytest
-pandas==1.3.2
+pandas
     # via -r ./requirements.in
-pathspec==0.9.0
+pathspec
     # via black
-pkginfo==1.7.1
+pkginfo
     # via twine
-platformdirs==2.2.0
+platformdirs
     # via pylint
-pluggy==0.13.1
+pluggy
     # via pytest
-py==1.10.0
+py
     # via pytest
-pydantic==1.8.2
+pydantic
     # via fastapi
-pygments==2.10.0
+pygments
     # via readme-renderer
-pylint==2.10.2
+pylint
     # via -r ./requirements.in
-pyparsing==2.4.7
+pyparsing
     # via packaging
-pytest==6.2.4
+pytest
     # via
     #   -r ./requirements.in
     #   pytest-cov
     #   pytest-mock
-pytest-cov==2.12.1
+pytest-cov
     # via -r ./requirements.in
-pytest-mock==3.6.1
+pytest-mock
     # via -r ./requirements.in
-python-dateutil==2.8.2
+python-dateutil
     # via pandas
-python-dotenv==0.19.0
+python-dotenv
     # via uvicorn
-python-gitlab==2.10.1
+python-gitlab
     # via python-semantic-release
-python-semantic-release==7.19.1
+python-semantic-release
     # via -r ./requirements.in
-pytz==2021.1
+pytz
     # via pandas
-pyyaml==5.4.1
+pyyaml
     # via
     #   flask-swagger
     #   uvicorn
-readme-renderer==29.0
+readme-renderer
     # via twine
-regex==2021.8.28
+regex
     # via black
-requests==2.26.0
+requests
     # via
     #   -r ./requirements.in
     #   python-gitlab
     #   python-semantic-release
     #   requests-toolbelt
     #   twine
-requests-toolbelt==0.9.1
+requests-toolbelt
     # via
     #   python-gitlab
     #   twine
-rfc3986==1.5.0
+rfc3986
     # via twine
-semver==2.13.0
+semver
     # via python-semantic-release
-setuptools-scm==6.0.1
+setuptools-scm
     # via dotty-dict
-six==1.16.0
+six
     # via
     #   bleach
     #   python-dateutil
     #   readme-renderer
-smmap==4.0.0
+smmap
     # via gitdb
-starlette==0.14.2
+starlette
     # via fastapi
-toml==0.10.2
+toml
     # via
     #   pylint
     #   pytest
     #   pytest-cov
-tomli==1.2.1
+tomli
     # via black
-tomlkit==0.7.0
+tomlkit
     # via python-semantic-release
-tqdm==4.62.2
+tqdm
     # via twine
-twine==3.4.2
+twine
     # via python-semantic-release
-typing-extensions==3.10.0.0
+typing-extensions
     # via pydantic
-urllib3==1.26.6
+urllib3
     # via requests
-uvicorn[standard]==0.15.0
+uvicorn[standard]
     # via -r ./requirements.in
-uvloop==0.16.0
+uvloop
     # via uvicorn
-watchgod==0.7
+watchgod
     # via uvicorn
-webencodings==0.5.1
+webencodings
     # via bleach
-websockets==9.1
+websockets
     # via uvicorn
-werkzeug==2.0.1
+werkzeug
     # via flask
-wheel==0.37.0
+wheel
     # via python-semantic-release
-wrapt==1.12.1
+wrapt
     # via astroid
-zipp==3.5.0
+zipp
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
